<resources>
    <!--Main-->
    <string name="app_name">WorkTime</string>
    <string name="image">image</string>

    <!--Master-->

    <!--User-->

    <string name="title_activity_main2">Main2Activity</string>
    <string name="nowe_zadanie">Nowe zadanie</string>
    <string name="osoba">Osoba</string>
    <string name="dodaj">Dodaj</string>
    <string name="priorytet">Priorytet</string>
    <string name="zadanie">Zadanie</string>
    <string name="nowy_projekt">Nowy projekt</string>
    <string name="nazwa_projektu">Nazwa projektu</string>
    <string name="klient">Klient</string>
    <string name="platforma">Platforma</string>
    <string name="dost_pne_api">Dostępne API</string>
    <string name="szacowany_czas">Szacowany czas</string>
    <string name="inne">Inne</string>
    <string name="dodatkowe_uwagi">Dodatkowe uwagi</string>
    <string name="projekt">Projekt</string>
    <string name="profil">Profil</string>
    <string name="projekty">Projekty</string>
    <string name="zadania">Zadania</string>
    <string name="edytuj">Edytuj</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="edycja_profilu">Edycja profilu</string>
    <string name="zmie">Zmień</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="anuluj">Anuluj</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="code">Code</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="start_stop"><![CDATA[Start & Stop]]></string>

</resources>
