<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/okno1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_n"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@color/color_1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/nowy_projekt"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_n"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_n"
        app:srcCompat="@mipmap/logo_3a" />

    <View
        android:id="@+id/view_n_1"
        android:layout_width="200dp"
        android:layout_height="370dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/okno5"
        android:translationX="-10dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_n" />

    <View
        android:id="@+id/view_n_2"
        android:layout_width="200dp"
        android:layout_height="370dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/okno2"
        app:layout_constraintBottom_toBottomOf="@+id/view_n_1"
        app:layout_constraintEnd_toEndOf="@+id/view_n_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_n_1"
        app:layout_constraintTop_toTopOf="@+id/view_n_1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_n"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/zaloguj"
        android:fontFamily="serif"
        android:onClick="add"
        android:padding="3dp"
        android:text="@string/dodaj"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_extraInfo" />

    <ImageView
        android:id="@+id/imageView_n_back1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="back"
        app:layout_constraintBottom_toTopOf="@+id/imageView_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView_n_back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="back"
        android:text="@string/projekty"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_n"
        app:layout_constraintStart_toEndOf="@+id/imageView_n_back1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_n_name"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/nazwa_projektu"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toTopOf="@+id/view_n_2" />

    <EditText
        android:id="@+id/editText_n_client"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/klient"
        android:inputType="text|textEmailAddress"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_name" />

    <EditText
        android:id="@+id/editText_n_platform"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/platforma"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_client" />

    <EditText
        android:id="@+id/editText_n_api"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/dost_pne_api"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_platform" />

    <EditText
        android:id="@+id/editText_n_time"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/szacowany_czas"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_api" />

    <EditText
        android:id="@+id/editText_n_info"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/inne"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_time" />

    <EditText
        android:id="@+id/editText_n_extraInfo"
        android:layout_width="170dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/dodatkowe_uwagi"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:singleLine="false"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textColorLink="@android:color/black"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_n_2"
        app:layout_constraintStart_toStartOf="@+id/view_n_2"
        app:layout_constraintTop_toBottomOf="@+id/editText_n_info" />


</android.support.constraint.ConstraintLayout>