<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/okno1"
    tools:context=".Rejestracja">

    <ImageView
        android:id="@+id/imageView_r"
        android:layout_width="0dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_user" />

    <TextView
        android:id="@+id/textView_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="5dp"
        android:text="@string/rejestracja"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_r" />

    <View
        android:id="@+id/view_r1"
        android:layout_width="200dp"
        android:layout_height="310dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/okno5"
        android:translationX="-10dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_r" />

    <View
        android:id="@+id/view_r2"
        android:layout_width="200dp"
        android:layout_height="310dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/okno2"
        app:layout_constraintBottom_toBottomOf="@+id/view_r1"
        app:layout_constraintEnd_toEndOf="@+id/view_r1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_r1"
        app:layout_constraintTop_toTopOf="@+id/view_r1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_r_back"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/zaloguj"
        android:fontFamily="serif"
        android:onClick="back"
        android:padding="3dp"
        android:text="@string/anuluj"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_phone" />

    <Button
        android:id="@+id/button_r_register"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/zaloguj"
        android:fontFamily="serif"
        android:onClick="register"
        android:padding="3dp"
        android:text="@string/zarejestruj"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_phone" />

    <EditText
        android:id="@+id/editText_r_phone"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_password2" />

    <EditText
        android:id="@+id/editText_r_password2"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_password" />

    <EditText
        android:id="@+id/editText_r_password"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_email" />

    <EditText
        android:id="@+id/editText_r_email"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toBottomOf="@+id/editText_r_name" />

    <EditText
        android:id="@+id/editText_r_name"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/wpisz_email"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_r2"
        app:layout_constraintStart_toStartOf="@+id/view_r2"
        app:layout_constraintTop_toTopOf="@+id/view_r2" />


</androidx.constraintlayout.widget.ConstraintLayout>