<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/okno1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_p"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@color/color_1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/profil"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_p"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_p"
        app:srcCompat="@mipmap/logo_4a" />

    <View
        android:id="@+id/view_p1"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/okno5"
        android:translationX="-10dp"
        android:translationY="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_p" />

    <View
        android:id="@+id/view_p2"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/okno2"
        app:layout_constraintBottom_toBottomOf="@+id/view_p1"
        app:layout_constraintEnd_toEndOf="@+id/view_p1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view_p1"
        app:layout_constraintTop_toTopOf="@+id/view_p1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_p_back1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="back"
        app:layout_constraintBottom_toTopOf="@+id/imageView_p"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView_p_back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="back"
        android:text="@string/projekty"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_p"
        app:layout_constraintStart_toEndOf="@+id/imageView_p_back1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_p_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="edit"
        android:text="@string/edytuj"
        android:textAlignment="gravity"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editText_p_name"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/name"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="Maciek Nalewajka"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_p2"
        app:layout_constraintStart_toStartOf="@+id/view_p2"
        app:layout_constraintTop_toTopOf="@+id/view_p2" />

    <TextView
        android:id="@+id/editText_p_email"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="maciek@o2.pl"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_p2"
        app:layout_constraintStart_toStartOf="@+id/view_p2"
        app:layout_constraintTop_toBottomOf="@+id/editText_p_name" />

    <TextView
        android:id="@+id/editText_p_password"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="********"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_p2"
        app:layout_constraintStart_toStartOf="@+id/view_p2"
        app:layout_constraintTop_toBottomOf="@+id/editText_p_email" />

    <TextView
        android:id="@+id/editText_p_phone"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left|center"
        android:hint="@string/phone"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:text="794257753"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textColorHint="@color/greyer"
        android:textDirection="anyRtl"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/view_p2"
        app:layout_constraintStart_toStartOf="@+id/view_p2"
        app:layout_constraintTop_toBottomOf="@+id/editText_p_password" />

    <Button
        android:id="@+id/button_p_logout"
        android:layout_width="60dp"
        android:layout_height="26dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/zaloguj"
        android:fontFamily="serif"
        android:onClick="logout"
        android:padding="3dp"
        android:text="Wyloguj"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>